# hydrasentry

./: .gitignore  BACKLOG.md  BOUNTY_SCOPE.md  CLAUDE.md  DEEP_DIVE_NOTES.md  DEMO.md  DEMO_60_SEC.md  DEV_NOTES.md  DISCORD_SUBMISSION.md  FINAL_REPORT.md  FINAL_STAGE_CHECKLIST.md  LIVE_SCRIPT.md  README.md  ROUND_LOG.md  SHIP_CHECKLIST.md  STAGE_RUNBOOK.md  SUBMISSION.md  SYSTEM_DESIGN.md  VIDEO_OUTLINE.md  render.yaml
backend/: .env.example  .gitignore  .vercelignore  MCP_README.md  agent_runner.py  cli.py  config.py  crypto_box.py  graph_extractor.py  hydra_client.py  main.py  mcp_gateway.py  model_router.py  ota.py  prewarm_real.py  provider_credentials.py  pyproject.toml  rate_limit.py  real_agent.py  real_graph.py  real_run.py  real_run_sample.json  report.py  requirements.txt  risk_engine.py  rules_store.py  scenario_engine.py  scenario_loader.py  scheduler.py  self_refiner.py  semantic_detector.py  skillmake_marketplace.py  skillmake_scanner.py  storage.py  vercel.json
backend/adapters/: __init__.py  local_adapter.py  local_extractor.py  local_scan.py
backend/api/: index.py
backend/auth/: __init__.py  api_keys.py  identity.py  jwt_verifier.py  service.py
backend/constellan/: __init__.py  __main__.py
backend/db/: __init__.py  engine.py  migrate.py  models.py  persistence.py  repo.py
backend/eval/: __init__.py  fake_embedding_space.py  semantic_eval.py  semantic_eval_dataset.json
backend/examples/: refund_memories.json
backend/hydrasentry_mcp/: __init__.py  __main__.py  certificate.py  schemas.py  server.py  tools.py
backend/ota_packs/: attack-pack.json  model-routing-pack.json  policy-pack.json  report-template-pack.json  skill-risk-pack.json
backend/scenarios/: cross_subtenant_leak.json  indirect_prompt_injection_doc.json  stale_memory_override.json  (+2 more)
(+288 files in other folders)
